--- a/app/views/tweets/_tweet.html.erb
+++ b/app/views/tweets/_tweet.html.erb
@@ -4,7 +4,7 @@
       <% if tweet.user.image.attached? %>
         <%= image_tag tweet.user.image, class:'user-icon' %>
       <% else %>
-        <%= image_tag 'default_tent.png', class:'user-icon' %>
+        <%= image_tag 'default_tent.png', class:'user-icon-dummy' %>
       <% end %>
     <% end %>
   </div>
