--- a/app/assets/stylesheets/reset.css
+++ b/app/assets/stylesheets/reset.css
@@ -136,5 +136,13 @@ li {
 
 body {
   margin: 0;
-  background-color: rgba(61, 60, 73, 0.952);
+  display: flex;
+  flex-flow: column;
+  min-height: 100vh;
+  /* background-color: rgba(61, 60, 73, 0.952); */
+}
+
+main {
+  padding-top: 60px;
+  flex: 1;
 }
