--- a/app/assets/stylesheets/tweets/show.css
+++ b/app/assets/stylesheets/tweets/show.css
@@ -21,15 +21,8 @@
   width: 40px;
   height: 100%;
   margin-left: 20px;
-  border: 1px solid black;
-  background-color: mediumaquamarine;
-}
-
-.user-icon {
-  height: 100%;
-  width: 100%;
-  object-fit: contain;
-  background-color: dodgerblue;
+  border-radius: 50%;
+  /* background-color: mediumaquamarine; */
 }
 
 .user-name-group {
