--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,18 @@
   </head>
 
   <body id="top" >
+  <% if user_signed_in? %>
+    <header>
+      <%= render 'shared/header' %>
+    </header>
+    <main>
+      <%= yield %>
+    </main>
+    <footer>
+      <%= render 'shared/footer' %>
+    </footer>
+  <% else %>
     <%= yield %>
+  <% end %>
   </body>
 </html>
