--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,3 @@
-<%= render '/shared/header'%>
-
 <h2>UserPage</h2>
 
 <% if @user.image.attached? %>
@@ -71,11 +69,14 @@
   </ul>
 </div>
 
-<div class="visit-u-edit">
 <% if @user.id == current_user.id %>
-  <%= link_to "EDIT", edit_user_registration_path(current_user) %>
+  <div class="visit-u-edit">
+    <%= link_to "EDIT", edit_user_registration_path(current_user) %>
+  </div>
+  <div class="sign-out-btn">
+    <%= link_to "SignOut", destroy_user_session_path, method: :delete %>
+  </div>
 <% end %>
-</div>
 
   <div id="follower">
     <h5 >フォロワー<%= @user.followers.count %>人</h5>
@@ -94,7 +95,6 @@
   <div>
       <%= render "follow_form" %>
   </div>
-
 
 <div class="user-tweet-list">
   <%= @user.name %>'s Tweet List
