--- a/app/assets/stylesheets/reset.css
+++ b/app/assets/stylesheets/reset.css
@@ -10,7 +10,8 @@
 */
 html{
   color:#000;
-  background:#FFF;
+  /* background:#FFF; */
+  background-color: rgba(255, 255, 255, 0.950);
 }
 /*
   TODO remove settings on BODY since we can't namespace it.
@@ -144,5 +145,6 @@ body {
 
 main {
   padding-top: 60px;
+  padding-bottom: 60px;
   flex: 1;
 }
