--- a/app/assets/stylesheets/tweets/show.css
+++ b/app/assets/stylesheets/tweets/show.css
@@ -10,18 +10,11 @@
   object-fit: contain;
 }
 
-.user-bar {
-  display: flex;
-  width: 100vw;
-  height: 40px;
-  background-color: lemonchiffon;
-}
-
 .user-icon-group {
   width: 40px;
   height: 100%;
-  margin-left: 20px;
-  border-radius: 50%;
+  /* margin-left: 20px; */
+  /* border-radius: 50%; */
   /* background-color: mediumaquamarine; */
 }
 
@@ -41,10 +34,10 @@
   margin: 0 10px;
 }
 
-.tweet-text {
+/* .tweet-text {
   background-color: rgb(117, 147, 231);
   margin: 10px 0 ;
-}
+} */
 
 #tweet-comments {
   background-color: lightskyblue;
