--- a/app/assets/stylesheets/landing_page.css
+++ b/app/assets/stylesheets/landing_page.css
@@ -1,14 +1,3 @@
-/* .landing-page {
-  width: 100%;
-  height: 0;
-  padding-top: 105.715514%;
-  background: url('campfire_mobile.jpeg') no-repeat ;
-  background-position: center center;
-  background-size: cover;
-  background-color: rgba(1, 0, 15, 0.952);
-  position: relative;
-} */
-
 .landing-page {
   height: 100vh;
   background: url('campfire_mobile.jpeg') no-repeat ;
@@ -19,30 +8,46 @@
 }
 
 .main-title {
-  /* background-color: chocolate; */
   width: 50vw;
   text-align: center;
   position: absolute;
-  top: calc((100vh - 400px) / 2);
-  left: calc(100vw - 95%);
+  top: 40px;
+  left: calc(100vw - 75%);
 }
 
-.solo-camp-sns {
+#solo-camp-sns {
   font-size: 50px;
   font-family: 'Homemade Apple', cursive;
   color: aliceblue;
+  display: none;
 }
 
-.sign-container {
+#sign-container {
+  /* display: none; */
   border: 1px solid white;
   border-radius: 10px;
-  /* width: 40%; */
   width: 350px;
-  height: 400px;
+  height: 430px;
   padding: 30px;
   position: absolute;
-  left: calc(100vw - 40%);
-  top: calc((100vh - 400px) / 2);
+  left: calc((100vw - 350px) / 2);
+  top: calc(((100vh - 430px) / 2) + 30px );
+  box-shadow: 0 0 10px rgba(41, 41, 41, 0.2);
+  background-color: rgba(36, 24, 24, 0.808);
+  box-sizing: border-box;
+  text-align: center;
+}
+
+#sign-container-new {
+  /* display: none; */
+  border: 1px solid white;
+  border-radius: 10px;
+  width: 350px;
+  height: 500px;
+  padding: 30px;
+  position: absolute;
+  left: calc((100vw - 350px) / 2);
+  top: calc(((100vh - 430px) / 2) + 30px );
   box-shadow: 0 0 10px rgba(41, 41, 41, 0.2);
   background-color: rgba(36, 24, 24, 0.808);
   box-sizing: border-box;
@@ -51,21 +56,63 @@
 
 .login {
   color: aliceblue;
-  margin-top: 0;
+  font-size: 20px;
+  margin-bottom: 10px;
 }
 
-.field {
+.new-user {
   color: aliceblue;
+  font-size: 20px;
+  margin-bottom: 10px;
+}
+
+.field-sign {
+  margin: 10px 0 ;
+  color: aliceblue;
+}
+
+.actions-sign {
+  margin: 10px 0 ;
+}
+
+.sign-btn {
+  background-color: #fff;
+  border-radius: 12%;
+  padding: 1px 1px;
+  margin-bottom: 5px;
+}
+
+.sign-up {
+  margin-bottom: 20px;
+}
+
+.log-in{
+  margin-bottom: 20px;
+}
+
+.sign-up-btn {
+  background-color: #fff;
+  padding: 4px 0;
+  border-radius: 8%;
+  border: darkgray solid 1.5px;
+}
+
+.log-in-btn {
+  background-color: #fff;
+  padding: 4px 1px;
+  border-radius: 8%;
+  border: darkgray solid 1.5px;
+}
+
+.forgot-message {
+  color:aliceblue;
 }
 
 .devise_links {
   color: aliceblue;
 }
 
-.devise_links a {
-  color: aliceblue;
-}
-
 .login-flash-message {
-  color: aliceblue;
+  margin-top: 10px;
+  color: rgba(255, 70, 70, 0.925);
 }
