--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,39 +1,54 @@
-<h2>Sign up</h2>
+<div class="landing-page">
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
-
-  <div class="field">
-    <%= f.label :name %><br />
-    <%= f.text_field :name, autofocus: true %>
+  <div class="main-title">
+    <h1 id="solo-camp-sns">
+      Solo-Camp SNS
+    </h1>
   </div>
+
+
+  <div id="sign-container-new">
+
+    <h2 class="new-user">新規登録</h2>
+
+    <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+      <%# <%= render "devise/shared/error_messages", resource: resource %>
+
+    <div class="field-sign">
+      <%= f.label :name %><br />
+      <%= f.text_field :name, autofocus: true %>
+    </div>
   
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autocomplete: "email" %>
+    <div class="field-sign">
+      <%= f.label :email %><br />
+      <%= f.email_field :email, autocomplete: "email", placeholder:"例)example@gmail.com" %>
+    </div>
+
+    <div class="field-sign">
+      <%= f.label :phone_num %><br />
+      <%= f.text_field :phone_num, autocomplete: "phone_num", maxlength:'11', placeholder:"ハイフンなし" %>
+    </div>
+
+    <div class="field-sign">
+      <%= f.label :password %>
+      <% if @minimum_password_length %>
+      <em>(<%= @minimum_password_length %> characters minimum)</em>
+      <% end %><br />
+      <%= f.password_field :password, autocomplete: "new-password", placeholder:"半角英数８文字以上" %>
+    </div>
+
+    <div class="field-sign">
+      <%= f.label :password_confirmation %><br />
+      <%= f.password_field :password_confirmation, autocomplete: "new-password", placeholder:"もう一度入力" %>
+    </div>
+
+    <div class="actions-sign">
+      <%= f.submit "新規登録" %>
+    </div>
+    <% end %>
+
+    <%= render "devise/shared/links" %>
+
   </div>
 
-  <div class="field">
-    <%= f.label :phone_num %><br />
-    <%= f.text_field :phone_num, autocomplete: "phone_num", maxlength:'11'%>
-  </div>
-
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</div>
