--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -12,15 +12,10 @@
         <% if current_user.image.attached? %>
           <%= image_tag current_user.image, class:"user-header-img" %>
         <% else %>
-          <%= image_tag 'default_tent.png', width:"20", height:"20" %>
+          <%= image_tag 'user-icon.png', width:"40", height:"40" %>
         <% end %>
-        <%# <%= current_user.name %>
       <% end %>
     </div>
-
-    <%# <div class="sign_out_btn">
-      <%= link_to "Sign_out", destroy_user_session_path, method: :delete %>
-    <%# </div> %>
 
     <div class="new-diary">
       <%=link_to new_tweet_path do %>
