--- a/app/assets/stylesheets/reset.css
+++ b/app/assets/stylesheets/reset.css
@@ -152,3 +152,9 @@ main {
 textarea {
   resize: none;
 }
+
+.field_with_errors {
+  display: inline;
+  background-color: rgba(255, 70, 70, 0.700);
+  border-radius: 5px;
+}
