--- a/app/views/tweets/edit.html.erb
+++ b/app/views/tweets/edit.html.erb
@@ -1,34 +1,41 @@
-<%= render 'shared/error_messages', resource: @tweets_tag %>
-
 <div class="tweet-form">
+  <div class="error-messages">
+    <%= render 'shared/error_messages', resource: @tweets_tag %>
+  </div>
+
   <%= form_with model: @tweets_tag, url: tweet_path, local: true do |f| %>
 
-  <div class="field" id="img-select">
-    <%= f.label :image %><br>
-    <%= f.file_field :image %>
+  <div class="tweet-field" id="img-select">
+    <%= f.label :image %>
+    <div id="img-prv">
+      <div id="img-select">
+        <%= f.label :image, "画像を選択", class:"img-upload-btn" %>
+        <%= f.file_field :image, class:"img-upload" %>
+      </div>
+    </div>
   </div>
-  <div id="img-prv"></div>
 
-  <div class="field">
+  <div class="tweet-field">
     <%= f.label :text %><br>
-    <%= f.text_area :text, placeholder: '400字以内', maxlength: '400' %>
+    <%= f.text_area :text, placeholder: '400字以内', maxlength: '400', class:"field-tweet-text" %>
   </div>
 
   <div class="select-visit">
     <%= f.collection_select(:camp_site_id, CampSite.all, :id, :site, {include_blank: "サイトを選択"}, {class:"site-select"}) %>
   </div>
 
-  <div class="send-btn">
-    <%= f.submit "SEND >> " %>
+  <div class="send-btn-area">
+    <%= f.submit "SEND", class:"send-btn"%>
   </div>
   
   <% end %>
+
+<div class="delete-btn-area">
+  <%= link_to "DELETE", tweet_path(@tweet.id), method: :delete, data: { confirm: "Are you sure delete?"}, class:"delete-btn" %>
 </div>
 
-<div class="delete-btn">
-  <%= link_to "DELETE", tweet_path(@tweet.id), method: :delete, data: { confirm: "Are you sure delete?"} %>
+<div class="back-btn-area">
+  <%= link_to 'BACK', root_path, class:"back-btn" %>
 </div>
 
-<div class="back-btn">
-  <%= link_to 'BACK', root_path %>
 </div>
