--- a/app/views/tweets/new.html.erb
+++ b/app/views/tweets/new.html.erb
@@ -4,15 +4,19 @@
   </div>
   <%= form_with model: @tweets_tag, url: tweets_path, local: true do |f| %>
 
-  <div class="field" id="img-select">
-    <%= f.label :image %><br>
-    <%= f.file_field :image %>
+  <div class="tweet-field">
+    <%= f.label :image %>
+    <div id="img-prv">
+      <div id="img-select">
+        <%= f.label :image, "画像を選択", class:"img-upload-btn" %>
+        <%= f.file_field :image, class:"img-upload" %>
+      </div>
+    </div>
   </div>
-  <div id="img-prv"></div>
 
-  <div class="field">
+  <div class="tweet-field">
     <%= f.label :text %><br>
-    <%= f.text_area :text, placeholder: '400字以内', maxlength: '400', size:'59x20' %>
+    <%= f.text_area :text, placeholder: '400字以内', maxlength: '400', class:"field-tweet-text"%>
   </div>
 
   <div class="select-visit">
