--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -2,7 +2,7 @@
 
   <div class="header-left-contents">
   <h1 id="main-title">
-    <%= link_to "Solo-Camp SNS", root_path %>
+    <%= link_to "Camper.", root_path %>
   </h1>
   </div>
 
