--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -16,17 +16,17 @@
 
     <div class="field-sign">
       <%= f.label :name %><br />
-      <%= f.text_field :name, autofocus: true %>
+      <%= f.text_field :name, autofocus: true, class:"f-sign" %>
     </div>
   
     <div class="field-sign">
       <%= f.label :email %><br />
-      <%= f.email_field :email, autocomplete: "email", placeholder:"例)example@gmail.com" %>
+      <%= f.email_field :email, autocomplete: "email", placeholder:"例)example@gmail.com", class:"f-sign" %>
     </div>
 
     <div class="field-sign">
       <%= f.label :phone_num %><br />
-      <%= f.text_field :phone_num, autocomplete: "phone_num", maxlength:'11', placeholder:"ハイフンなし" %>
+      <%= f.text_field :phone_num, autocomplete: "phone_num", maxlength:'11', placeholder:"ハイフンなし", class:"f-sign" %>
     </div>
 
     <div class="field-sign">
@@ -34,16 +34,16 @@
       <% if @minimum_password_length %>
       <em>(<%= @minimum_password_length %> characters minimum)</em>
       <% end %><br />
-      <%= f.password_field :password, autocomplete: "new-password", placeholder:"半角英数８文字以上" %>
+      <%= f.password_field :password, autocomplete: "new-password", placeholder:"半角英数８文字以上", class:"f-sign" %>
     </div>
 
     <div class="field-sign">
       <%= f.label :password_confirmation %><br />
-      <%= f.password_field :password_confirmation, autocomplete: "new-password", placeholder:"もう一度入力" %>
+      <%= f.password_field :password_confirmation, autocomplete: "new-password", placeholder:"もう一度入力", class:"f-sign" %>
     </div>
 
     <div class="actions-sign">
-      <%= f.submit "新規登録" %>
+      <%= f.submit "新規登録", class:"sign-btn" %>
     </div>
     <% end %>
 
