--- a/app/assets/stylesheets/users/show.css
+++ b/app/assets/stylesheets/users/show.css
@@ -117,13 +117,13 @@
 }
 
 .edit-u-btn a {
-  color: rgb(240, 240, 240);
+  color: white;
   height: 40px;
   line-height: 40px;
 }
 
 .sign-out-btn a {
-  color: rgb(240, 240, 240);
+  color: white;
 }
 
 .user-introduce {
@@ -278,12 +278,12 @@
 }
 
 .u-back {
-  color: rgb(240, 240, 240);
+  color: white;
   line-height: 40px;
 }
 
 .u-upd {
-  color: rgb(240, 240, 240);
+  color: white;
   line-height: 40px;
 }
 
