--- a/app/views/comments/_comments.html.erb
+++ b/app/views/comments/_comments.html.erb
@@ -1,23 +1,20 @@
-<div class="tweet-comment-group" id="tweet-comments">
+<div class="tweet-comment-group">
     
-      <ul class="tweet-comments">
+    <% if controller.action_name == "show" %>
+      <div class="comment-form">
+        <%= form_with model: [@tweet, @comment] do |f|%>
+          <%= f.text_area :comment, class:"comment-area", placeholder: "140字まで" %>
+          <%= f.submit "SEND", class:"comment-btn" %>
+        <% end %>
+      </div>
+    <% end %>
+
+      <div class="tweet-comments">
         <% comments.each do |comment| %>
-        <div class="comment-box">
-          <li class="comment-user">
-            <%= link_to user_path(comment.user.id) do %>
-              <%= comment.user.name %>
-            <% end %>
-          </li>
-          <li class="comment-text">
-            <%= comment.comment %>
-          </li>
-          <% if comment.user.id == current_user.id %>
-            <li class="comment-delete-btn">
-              <%= link_to "delete", tweet_comment_path(comment.tweet.id, comment.id), method: :delete , id:"delete-btn" %>
-            </li>
-          <% end %>
+          <div id="tweet-com<%= comment.id %>">
+            <%= render 'comments/tweet_comment', comment: comment %>
           </div>
         <% end %>
-      </ul>
+      </div>
     
-  </div>
+</div>
