--- a/app/views/interes/index.html.erb
+++ b/app/views/interes/index.html.erb
@@ -4,12 +4,11 @@
   <% if current_user.id == intere.user_id %>
   <li id="site<%= intere.id %>">
     <%= intere.camp_site.prefecture.name %>  
-    <%= link_to intere.camp_site.site, camp_site_show_path(intere.camp_site) %>  
-    <%= link_to 'リストから外す', destroy_intere_path(intere.camp_site), method: :delete %>
+    <%= link_to intere.camp_site.site, camp_site_show_path(intere.camp_site) %>
   </li>
   <% end %>
 <% end %>
 
-<li><%= link_to 'キャンプ場を探す >>', camp_sites_path %></li>
+<li><%= link_to 'キャンプ場を探す', camp_sites_path %></li>
 
-<li><%= link_to '<< 戻る', root_path %></li>
+<li><%= link_to 'Back', root_path %></li>
