--- a/app/views/tweets/new.html.erb
+++ b/app/views/tweets/new.html.erb
@@ -4,31 +4,41 @@
   </div>
   <%= form_with model: @tweets_tag, url: tweets_path, local: true do |f| %>
 
+  <h2 class="t-new-title">
+    New Diary
+  </h2>
+  
   <div class="tweet-field">
-    <%= f.label :image %>
     <div id="img-prv">
       <div id="img-select">
-        <%= f.label :image, "画像を選択", class:"img-upload-btn" %>
+        <%= f.label :image, class:"img-upload-btn" %>
         <%= f.file_field :image, class:"img-upload" %>
       </div>
     </div>
   </div>
 
   <div class="tweet-field">
-    <%= f.label :text %><br>
-    <%= f.text_area :text, placeholder: '400字以内', maxlength: '400', class:"field-tweet-text"%>
+    
+    <%= f.text_area :text, placeholder: '本文を入力(400字以内)', maxlength: '400', class:"field-tweet-text"%>
   </div>
 
   <div class="select-visit">
     <%= f.collection_select(:camp_site_id, CampSite.all, :id, :site, {include_blank: "サイトを選択"}, {class:"site-select"}) %>
   </div>
 
-  <div class="send-btn-area">
-    <%= f.submit "SEND", class:"send-btn" %>
+  <div class="t-btn-area">
+    <div class="back-btn-area">
+      <div class="u-back-btn">
+        <%= link_to 'BACK', root_path, class:"u-back" %>
+      </div>
+    </div>
+    <div class="send-btn-area">
+      <div class="t-send-btn">
+        <%= f.submit "SEND", class:"t-send" %>
+      </div>
+    </div>
   </div>
   
   <% end %>
-  <div class="back-btn-area">
-    <%= link_to 'BACK', root_path, class:"back-btn" %>
-  </div>
+  
 </div>
